Finalizado el proceso de cobro de los negocios
